docs: update docs.go
