# api/docs/swagger.yaml
@@ -174,6 +174,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/api.ErrorRes'
+      security:
+      - ApiKeyAuth: []
       summary: Create alias
       tags:
       - alias
@@ -199,6 +201,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/api.ErrorRes'
+      security:
+      - ApiKeyAuth: []
       summary: Delete alias
       tags:
       - alias
@@ -223,6 +227,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/api.ErrorRes'
+      security:
+      - ApiKeyAuth: []
       summary: Get alias
       tags:
       - alias
@@ -253,6 +259,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/api.ErrorRes'
+      security:
+      - ApiKeyAuth: []
       summary: Update alias
       tags:
       - alias
@@ -274,6 +282,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/api.ErrorRes'
+      security:
+      - ApiKeyAuth: []
       summary: Get aliases
       tags:
       - alias
@@ -326,6 +336,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/api.ErrorRes'
+      security:
+      - ApiKeyAuth: []
       summary: Create recipient
       tags:
       - recipient
@@ -351,6 +363,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/api.ErrorRes'
+      security:
+      - ApiKeyAuth: []
       summary: Delete recipient
       tags:
       - recipient
@@ -375,6 +389,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/api.ErrorRes'
+      security:
+      - ApiKeyAuth: []
       summary: Get recipient
       tags:
       - recipient
@@ -406,6 +422,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/api.ErrorRes'
+      security:
+      - ApiKeyAuth: []
       summary: Activate recipient
       tags:
       - recipient
@@ -431,6 +449,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/api.ErrorRes'
+      security:
+      - ApiKeyAuth: []
       summary: Send recipient OTP
       tags:
       - recipient
@@ -452,6 +472,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/api.ErrorRes'
+      security:
+      - ApiKeyAuth: []
       summary: Get recipients
       tags:
       - recipient
@@ -497,6 +519,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/api.ErrorRes'
+      security:
+      - ApiKeyAuth: []
       summary: Get settings
       tags:
       - settings
@@ -522,6 +546,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/api.ErrorRes'
+      security:
+      - ApiKeyAuth: []
       summary: Update settings
       tags:
       - settings
